--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <RootNamespace>Analogy.LogViewer.NLogProvider</RootNamespace>
+    <RootNamespace>Analogy.LogViewer.JsonParser</RootNamespace>
     <AssemblyName>Analogy.LogViewer.JsonParser</AssemblyName>
     <TargetFramework>net472</TargetFramework>
     <AssemblyTitle>Analogy.LogViewer.NLogProvider</AssemblyTitle>
     <Product>Analogy.LogViewer.JsonParser</Product>
     <Copyright>Lior Banai ©  2020</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.1.0</FileVersion>
+    <FileVersion>1.0.0.0</FileVersion>
     <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
