--- a/Analogy.LogViewer.JsonParser.UnitTests/Analogy.LogViewer.JsonParser.UnitTests.csproj
+++ b/Analogy.LogViewer.JsonParser.UnitTests/Analogy.LogViewer.JsonParser.UnitTests.csproj
@@ -51,7 +51,7 @@
       <Version>1.1.7.1</Version>
     </PackageReference>
     <PackageReference Include="Analogy.LogViewer.Interfaces">
-      <Version>2.3.1.1</Version>
+      <Version>2.3.2.1</Version>
     </PackageReference>
     <PackageReference Include="MSTest.TestAdapter">
       <Version>2.1.2</Version>
@@ -65,10 +65,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="test.clef">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="test2.clef">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
