--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -4,11 +4,21 @@
     <OutputType>Library</OutputType>
     <TargetFrameworks>net472;net471;netcoreapp3.1</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
+    <Authors>Lior Banai</Authors>
+    <Version>0.1.0</Version>
+    <Company>Analogy.LogViewer</Company>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/Analogy-LogViewer/Analogy.LogViewer.JsonParser</PackageProjectUrl>
+    <PackageIcon>AnalogyJson.png</PackageIcon>
+    <RepositoryUrl>https://github.com/Analogy-LogViewer/Analogy.LogViewer.JsonParser</RepositoryUrl>
+    <RepositoryType>it</RepositoryType>
+    <PackageTags>Analogy.LogViewer, Json</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Analogy.DataProviders.Extensions" Version="1.1.7.1" />
-    <PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.3.1.1" />
+    <PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.3.2.1" />
     <PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -32,6 +42,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Assets\AnalogyJson.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
