--- a/.github/workflows/dotnet-core-desktop.yml
+++ b/.github/workflows/dotnet-core-desktop.yml
@@ -22,6 +22,9 @@ jobs:
       Test_Project_Path: Analogy.LogViewer.JsonParser.UnitTests\Analogy.LogViewer.JsonParser.UnitTests.csproj     # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
      
     steps:
+    - name: print type
+      run:  echo "Type - ${{github.event_name}}"
+      
     - name: Checkout
       uses: actions/checkout@v2
       with:
