--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net472;net471;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net48;net472;net471;netcoreapp3.1</TargetFrameworks>
 		<UseWindowsForms>true</UseWindowsForms>
 		<Authors>Lior Banai</Authors>
 		<Company>Analogy.LogViewer</Company>
@@ -22,13 +22,13 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>8.0</LangVersion>
 		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-		<Version>0.3.7</Version>
+		<Version>0.3.8</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Analogy.CommonUtilities" Version="1.4.3" />
 		<PackageReference Include="Analogy.LogViewer.Template" Version="1.7.0" />
-		<PackageReference Include="System.Resources.Extensions" Version="4.6.0" />
+		<PackageReference Include="System.Resources.Extensions" Version="5.0.0" />
 		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.8.2.5" />
 		<PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
