--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net48;net472;net471;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net5.0-windows;net48;net472;net471;netcoreapp3.1</TargetFrameworks>
 		<UseWindowsForms>true</UseWindowsForms>
 		<Authors>Lior Banai</Authors>
 		<Company>Analogy.LogViewer</Company>
@@ -22,14 +22,14 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>8.0</LangVersion>
 		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-		<Version>0.4.3.1</Version>
+		<Version>0.5.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Analogy.CommonUtilities" Version="1.4.6.2" />
-		<PackageReference Include="Analogy.LogViewer.Template" Version="1.8.3.2" />
+		<PackageReference Include="Analogy.CommonUtilities" Version="1.5.0" />
+		<PackageReference Include="Analogy.LogViewer.Template" Version="1.9.0" />
 		<PackageReference Include="System.Resources.Extensions" Version="5.0.0" />
-		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.12.5" />
+		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="2.13.0" />
 		<PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
