--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -15,22 +15,22 @@
 		<PackageProjectUrl>https://github.com/Analogy-LogViewer/Analogy.LogViewer.JsonParser</PackageProjectUrl>
 		<PackageIcon>AnalogyJson.png</PackageIcon>
 		<RepositoryUrl>https://github.com/Analogy-LogViewer/Analogy.LogViewer.JsonParser</RepositoryUrl>
-		<RepositoryType>it</RepositoryType>
+		<RepositoryType>git</RepositoryType>
 		<PackageTags>Analogy.LogViewer, Json</PackageTags>
 		<Copyright>Lior Banai @ 2020-2022</Copyright>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Nullable>enable</Nullable>
 		<LangVersion>8.0</LangVersion>
 		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-		<Version>1.2.0</Version>
+		<Version>1.3.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Analogy.CommonUtilities" Version="2.0.1" />
-		<PackageReference Include="Analogy.LogViewer.Template" Version="3.0.1" />
+		<PackageReference Include="Analogy.CommonUtilities" Version="2.1.0" />
+		<PackageReference Include="Analogy.LogViewer.Template" Version="3.1.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
-		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="3.0.1" />
+		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="3.1.0" />
 		<PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
