--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -20,17 +20,17 @@
 		<Copyright>Lior Banai @ 2020-2022</Copyright>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Nullable>enable</Nullable>
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>latest</LangVersion>
 		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-		<Version>1.3.4</Version>
+		<Version>3.4.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Analogy.CommonUtilities" Version="2.3.2" />
-		<PackageReference Include="Analogy.LogViewer.Template" Version="3.3.2" />
+		<PackageReference Include="Analogy.CommonUtilities" Version="3.4.0" />
+		<PackageReference Include="Analogy.LogViewer.Template" Version="3.4.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
-		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="3.3.2" />
+		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="3.4.0" />
 		<PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
