--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net6.0-windows;net5.0-windows;net48;net471;net472;netcoreapp3.1</TargetFrameworks>
+		<TargetFrameworks>net7.0-windows;net6.0-windows;net48;net471</TargetFrameworks>
 		<UseWindowsForms>true</UseWindowsForms>
 		<Authors>Lior Banai</Authors>
 		<Company>Analogy.LogViewer</Company>
@@ -22,15 +22,15 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
-		<Version>3.4.0</Version>
+		<Version>3.5.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Analogy.CommonUtilities" Version="3.4.0" />
-		<PackageReference Include="Analogy.LogViewer.Template" Version="3.4.0" />
+		<PackageReference Include="Analogy.CommonUtilities" Version="3.5.0" />
+		<PackageReference Include="Analogy.LogViewer.Template" Version="3.5.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
-		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="3.4.0" />
+		<PackageReference Include="System.Resources.Extensions" Version="7.0.0" />
+		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="3.5.0" />
 		<PackageReference Include="Microsoft.Build.Tasks.Git" Version="1.1.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
