--- a/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
+++ b/Analogy.LogViewer.JsonParser/Analogy.LogViewer.JsonParser.csproj
@@ -4,23 +4,23 @@
 		<OutputType>Library</OutputType>
 		<TargetFrameworks>net9.0-windows;net8.0-windows;net48</TargetFrameworks>
 		<UseWindowsForms>true</UseWindowsForms>
-		<VersionPrefix>8.1.0</VersionPrefix>
-		<VersionSuffix></VersionSuffix>
+		<VersionPrefix>9.0.0</VersionPrefix>
+		<VersionSuffix>rc1</VersionSuffix>
 		<Authors>Lior Banai</Authors>
 		<Company>Analogy.LogViewer</Company>
 		<PackageProjectUrl>https://github.com/Analogy-LogViewer/Analogy.LogViewer.JsonParser</PackageProjectUrl>
 		<PackageIcon>AnalogyJson.png</PackageIcon>
 		<RepositoryUrl>https://github.com/Analogy-LogViewer/Analogy.LogViewer.JsonParser</RepositoryUrl>
 		<PackageTags>Analogy.LogViewer, Json</PackageTags>
-		<Copyright>Lior Banai 2020-2025</Copyright>
+		<Copyright>Lior Banai 2020-2026</Copyright>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="8.1.0" />
-		<PackageReference Include="Analogy.CommonUtilities" Version="8.1.0" />
-		<PackageReference Include="Analogy.LogViewer.Template" Version="8.1.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="System.Resources.Extensions" Version="9.0.4" />
+		<PackageReference Include="Analogy.LogViewer.Interfaces" Version="9.0.0-rc2" />
+		<PackageReference Include="Analogy.CommonUtilities" Version="9.0.0-rc2" />
+		<PackageReference Include="Analogy.LogViewer.Template" Version="9.0.0-rc4" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+		<PackageReference Include="System.Resources.Extensions" Version="9.0.10" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Update="Properties\Resources.Designer.cs">
